fix: added top margin on body tag to fix the 2nd div into overlapping 1st div

--- a/main.css
+++ b/main.css
@@ -1,7 +1,7 @@
 body {
   font-family: 'Arvo', serif;
   background-color: #FFD05B;
-  padding-top: 2em;
+  padding-top: 7em;
   height: 100vh;
   width: 100vw;
   text-align: center;
